--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "homebridge-tuya-smartlamp",
-  "version": "1.0.0",
+  "version": "0.3.1",
   "description": "Homebridge plugin for Tuya/Lohas Led Smart Lamp",
   "main": "index.js",
   "scripts": {
@@ -31,5 +31,6 @@
   "bugs": {
     "url": "https://github.com/SLaweck/homebridge-tuya-smartlamp/issues"
   },
-  "homepage": "https://github.com/SLaweck/homebridge-tuya-smartlamp#readme"
+  "homepage": "https://github.com/SLaweck/homebridge-tuya-smartlamp#readme",
+  "devDependencies": {}
 }
