--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "async": "^2.6.1",
     "debug": "^3.1.0",
+    "rxjs": "^6.2.2",
     "tuyapi": "^3.0.1"
   },
   "repository": {
