--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "hb:test": "homebridge -P config/node_modules/ -U config/ || true",
-    "hb:dev": "cp -a index.js lib config/node_modules/homebridge-tuya-smartlamp/ && DEBUG=TuyaOutlet,TuyaAccessory,TuyaSmartDevice homebridge -D -P config/node_modules/ -U config/ || true"
+    "hb:test": "cp -a index.js lib config/node_modules/homebridge-tuya-smartlamp/ && homebridge -D -P config/node_modules/ -U config/ || true",
+    "hb:dev": "cp -a index.js lib config/node_modules/homebridge-tuya-smartlamp/ && DEBUG=Tuya* homebridge -D -P config/node_modules/ -U config/ || true"
   },
   "engines": {
     "homebridge": ">=0.4.0",
@@ -30,6 +30,7 @@
   "license": "MIT",
   "dependencies": {
     "async": "^2.6.1",
+    "color-convert": "^1.9.2",
     "debug": "^3.1.0",
     "fakegato-history": "^0.5.2",
     "rxjs": "^6.2.2",
@@ -43,5 +44,7 @@
     "url": "https://github.com/SLaweck/homebridge-tuya-smartlamp/issues"
   },
   "homepage": "https://github.com/SLaweck/homebridge-tuya-smartlamp#readme",
-  "devDependencies": {}
+  "devDependencies": {
+    "homebridge": "^0.4.44"
+  }
 }
