Disable homebridge debug in hb:test

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "hb:test": "cp -a index.js lib config/node_modules/homebridge-tuya-smartlamp/ && homebridge -D -P config/node_modules/ -U config/ || true",
+    "hb:test": "cp -a index.js lib config/node_modules/homebridge-tuya-smartlamp/ && homebridge -P config/node_modules/ -U config/ || true",
     "hb:dev": "cp -a index.js lib config/node_modules/homebridge-tuya-smartlamp/ && DEBUG=Tuya* homebridge -D -P config/node_modules/ -U config/ || true"
   },
   "engines": {
