--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "hb:test": "cp -a index.js lib config/node_modules/homebridge-tuya-smartlamp/ && homebridge -P config/node_modules/ -U config/ || true",
-    "hb:dev": "cp -a index.js lib config/node_modules/homebridge-tuya-smartlamp/ && DEBUG=Tuya* homebridge -D -P config/node_modules/ -U config/ || true"
+    "hb:test": "cp -a package.json index.js lib config/node_modules/homebridge-tuya-smartlamp/ && homebridge -P config/node_modules/ -U config/ || true",
+    "hb:dev": "cp -a package.json index.js lib config/node_modules/homebridge-tuya-smartlamp/ && DEBUG=Tuya* homebridge -D -P config/node_modules/ -U config/ || true"
   },
   "engines": {
     "homebridge": ">=0.4.0",
@@ -30,12 +30,12 @@
   "author": "SLaweck <slaweck7@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "async": "^2.6.1",
+    "async": "^2.6.3",
     "color-convert": "^1.9.3",
-    "debug": "^3.2.5",
-    "fakegato-history": "^0.5.2",
-    "rxjs": "^6.3.2",
-    "tuyapi": "^3.0.2"
+    "debug": "^3.2.6",
+    "fakegato-history": "^0.5.3",
+    "rxjs": "^6.5.2",
+    "tuyapi": "^5.1.3"
   },
   "repository": {
     "type": "git",
@@ -46,6 +46,6 @@
   },
   "homepage": "https://github.com/SLaweck/homebridge-tuya-smartlamp#readme",
   "devDependencies": {
-    "homebridge": "^0.4.45"
+    "homebridge": "^0.4.50"
   }
 }
